# b2bpay_test_assignment

./: .dockerignore  .env_example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint-wsgi.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
b2bpay/config/: asgi.py  settings.py  urls.py  wsgi.py
b2bpay/db/: env.py  models.py
b2bpay/db/versions/: 781cc5328eb8_wallets_and_transactions.py
b2bpay/finances/: apps.py  urls.py
b2bpay/finances/payments/: apps.py  serializers.py  services.py  urls.py  views.py
b2bpay/finances/transactions/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
b2bpay/finances/transactions/migrations/: 0001_initial.py  0002_alter_transaction_txid.py  0003_alter_transaction_options_alter_transaction_amount_and_more.py
b2bpay/finances/wallets/: apps.py  exceptions.py  models.py  serializers.py  services.py  subscribers.py  urls.py  views.py
b2bpay/finances/wallets/migrations/: 0001_initial.py  0002_wallet_check_balance_non_negative.py  0003_remove_wallet_check_balance_non_negative_and_more.py
b2bpay/tests/: factories.py
deployment/mysql/: init-databases.sql
deployment/nginx/: Dockerfile  nginx.conf
deployment/wsgi/: wait-for-db.sh
tests/b2bpay/finances/payments/: test_payments_api.py
tests/b2bpay/finances/transactions/: test_transactions.py  test_transactions_api.py  test_transactions_api_detail.py  test_transactions_api_list.py
tests/b2bpay/finances/wallets/: test_wallets.py  test_wallets_api.py  test_wallets_api_detail.py  test_wallets_api_list.py
